# mac_ios_cleaner

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
mac_cleaner/: __main__.py  categories.py  cleaner.py  cli.py  scanner.py  utils.py
